# mpiperfviewer

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  application_window.py  benchmark.py  cli.py  create_views.py  filter_view.py  main.py  parser.py  plot_view.py  plots.py  pyproject.toml  requirements.txt  statistics_view.py
filtering/: filter_widgets.py  filters.py
mpiperfcli/: pyproject.toml
mpiperfcli/src/mpiperfcli/: __init__.py  filters.py  parser.py  plots.py
plotting/: plot_view.py  plots.py
src/mpiperfviewer/: __init__.py  application_window.py  create_views.py  filter_widgets.py  main_window.py  plot_view.py  project_state.py  project_view.py  start_dialog.py  statistics_view.py
