[project]
name = "mpiperfviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pyserde>=0.24.0",
    "pyside6>=6.9.0",
    "tomli-w>=1.2.0",
    "tomlkit>=0.13.2",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
