[project]
name = "mpiperfcli"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bjarne Hansen", email = "bjarne.hansen@tum.de" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pyserde>=0.24.0",
    "tomli-w>=1.2.0",
    "tomlkit>=0.13.2",
]

[project.scripts]
mpiperfcli = "mpiperfcli:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
